fix some bugs;add readme;add 404 page

--- a/layout/_partial/archive/categories.ejs
+++ b/layout/_partial/archive/categories.ejs
@@ -11,7 +11,7 @@ site.categories.each(function(category, i) {
 
 <div class="mdui-row simple-archive-header">
     <div class="mdui-col-xs-10 mdui-col-offset-xs-1 mdui-valign simple-archive-header-inner">
-        <div class="mdui-typo-display-2 mdui-text-color-white" id="div-archive-title">Categories: <%= page.category %></div>
+        <div class="mdui-typo-display-2 mdui-text-color-white" id="simple-archive-title">Categories: <%= page.category %></div>
     </div>
 </div>
 <div class="mdui-row simple-archive-name">
