--- a/layout/_partial/archive/index.ejs
+++ b/layout/_partial/archive/index.ejs
@@ -1,8 +1,8 @@
 <%# archive page(archive, categories and tags pages will use this page) %>
 
 <div class="mdui-row simple-archive-header">
-    <div class="mdui-col-xs-10 mdui-col-offset-xs-1 mdui-valign" style="height: 100px;">
-        <div class="mdui-typo-display-2 mdui-text-color-white" id="div-archive-title">Archives</div>
+    <div class="mdui-col-xs-10 mdui-col-offset-xs-1 mdui-valign simple-archive-header-inner">
+        <div class="mdui-typo-display-2 mdui-text-color-white" id="simple-archive-title">Archives</div>
     </div>
 </div>
 
