--- a/layout/_partial/menu.ejs
+++ b/layout/_partial/menu.ejs
@@ -3,10 +3,10 @@
 <div class="mdui-drawer mdui-drawer-full-height mdui-drawer-close mdui-color-white simple-menu-cls" id="simple-menu">
     <div class="simple-menu-author">
         <a href="/">
-            <img class="mdui-img-circle" src="<%= config.avatar %>"/>
+            <img class="mdui-img-circle" src="<%= theme.avatar %>"/>
         </a>
         <div class="mdui-typo-title"><%= config.author %></div>
-        <p><%= config.email %></p>
+        <p><%= theme.email %></p>
     </div>
     <ul class="mdui-list mdui-typo">
         <li class="mdui-list-item mdui-ripple mdui-valign">
