--- a/layout/categories.ejs
+++ b/layout/categories.ejs
@@ -2,7 +2,7 @@
 
 <div class="mdui-row simple-archive-header">
     <div class="mdui-col-xs-10 mdui-col-offset-xs-1 mdui-valign simple-archive-header-inner">
-        <div class="mdui-typo-display-3 mdui-text-color-white" id="div-archive-title">Categories</div>
+        <div class="mdui-typo-display-3 mdui-text-color-white" id="simple-archive-title">Categories</div>
     </div>
 </div>
 <div class="mdui-row simple-archive-name">
