--- a/layout/_partial/archive/tags.ejs
+++ b/layout/_partial/archive/tags.ejs
@@ -11,7 +11,7 @@ site.tags.each(function(tag, i) {
 
 <div class="mdui-row simple-archive-header">
     <div class="mdui-col-xs-10 mdui-col-offset-xs-1 mdui-valign simple-archive-header-inner">
-        <div class="mdui-typo-display-2 mdui-text-color-white" id="div-archive-title">Tags: <%= page.tag %></div>
+        <div class="mdui-typo-display-2 mdui-text-color-white" id="simple-archive-title">Tags: <%= page.tag %></div>
     </div>
 </div>
 <div class="mdui-row simple-archive-name">
