--- a/layout/_partial/article-excerpt.ejs
+++ b/layout/_partial/article-excerpt.ejs
@@ -36,7 +36,7 @@
             <% item.tags.each(function(tag, i){ 
                 var color = 'mdui-color-' + theme.tags.colors[i % theme.tags.colors.length]; %>
             %>
-                <a class="mdui-btn mdui-btn-dense mdui-hoverable <%= color %> simple-article-tags">
+                <a href="<%- config.root %>tags/<%= tag.name %>" class="mdui-btn mdui-btn-dense mdui-hoverable <%= color %> simple-article-tags">
                     <%- tag.name %>
                 </a>
             <% }); %>
