--- a/layout/_partial/index/recent-posts.ejs
+++ b/layout/_partial/index/recent-posts.ejs
@@ -19,7 +19,7 @@
             <a href="<%- config.root %><%- item.path %>" class="mdui-text-color-theme">
                 <%- item.title %>
             </a>
-            <% if (i < theme.recent.posts - 1 && sortPosts.length > theme.recent.posts) { %>
+            <% if (i != sortPosts.length - 1) { %>
                 <div class="mdui-divider mdui-m-y-1"></div>
             <% } %>
         <% });%>
