--- a/layout/_partial/index/hot-tags.ejs
+++ b/layout/_partial/index/hot-tags.ejs
@@ -41,10 +41,10 @@ for (var i = 0; i < tagArray.length - 1; i++) {
 
 <div class="mdui-card mdui-hoverable">
     <div class="mdui-card-header">
-        <h3><i class="mdui-list-item-icon mdui-icon ion-ios-flame"></i> 热门标签</h3>
+        <h3><i class="mdui-list-item-icon mdui-icon ion-ios-flame"></i> 热门标签<%= tagArray.length %></h3>
     </div>
     <div class="mdui-card-content">
-    <% for (var i = 0; i < tagArray.length - 1; i++) { 
+    <% for (var i = 0; i < tagArray.length; i++) { 
         var color = 'mdui-color-' + theme.tags.colors[i % theme.tags.colors.length]; %>
         <a class="mdui-btn mdui-btn-dense mdui-hoverable <%= color %> simple-hot-tags" href="<%- config.root %>tags/<%= tagArray[i].name %>">
             <%= tagArray[i].name %> <%= tagArray[i].value %>
