use cdn and delete unused files;add share buttons and functions;

--- a/layout/404.ejs
+++ b/layout/404.ejs
@@ -1,2 +1,7 @@
-<%= page.title %>
-<%= page.description %>
+<div class="mdui-row simple-height" style="min-height:540px;">
+    <div class="mdui-row" style="min-height:540px;">
+        <div class="mdui-col-md-12 mdui-col-xs-12 mdui-valign" style="min-height:540px;">
+            <div class="mdui-typo-display-4 mdui-center"><%= page.title %></div>
+        </div>
+    </div>
+</div>
