--- a/layout/_partial/after-footer.ejs
+++ b/layout/_partial/after-footer.ejs
@@ -1,4 +1,8 @@
-<%- js('modules/mdui/js/mdui.min.js') %>
-<%- js('modules/busuanzi/2.3/busuanzi.pure.min.js') %>
+
+<script src="//cdnjs.loli.net/ajax/libs/mdui/0.4.1/js/mdui.min.js"></script>
+<script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+
 <%- js('modules/algolia/algoliasearchLite.min.js') %>
+
 <%- js('js/common.js') %>
+<%- partial('_partial/plugins/statistics') %>
