--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -17,10 +17,15 @@
 
     <title><%= config.title %> | <%= config.subtitle %></title>
 
-    <%# MDUI core CSS %>
-    <%- css('modules/mdui/css/mdui.min.css') %>
-    <%- css('modules/ionicons/4.4.2/css/ionicons.min.css') %>
+    <%# Font Awesome %>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+
+    <%# MDUI %>
+    <link rel="stylesheet" href="//cdnjs.loli.net/ajax/libs/mdui/0.4.1/css/mdui.min.css">
+
+    <%# Common %>
     <%- css('css/common.css') %>
 
-    <%- js('modules/jquery/jquery-2.2.3.min.js') %>
+    <%# Jquery %>
+    <script src="https://cdn.bootcss.com/jquery/2.2.3/jquery.min.js"></script>
 </head>
