--- a/source/css/common.css
+++ b/source/css/common.css
@@ -36,6 +36,16 @@ body {
 /**
  * header
  */
+ .simple-header-share-pane {
+    display: none;
+}
+ .simple-header-share-pane a {
+     margin: 10px 10px 10px 10px;
+ }
+.simple-header-share-pane i {
+    color: white;
+    margin-top: 7px;
+}
 .simple-appbar {
     z-index: 1000;
     width: 100%;
@@ -43,6 +53,15 @@ body {
 
 .simple-searchbar {
     color: white;
+    padding: 1px 10px;
+    margin: 1px 1px;
+}
+
+.simple-header-share {
+    width: 36px !important;
+    min-width: 36px !important;
+    height: 36px !important;
+    margin: 1px 10px 1px 1px !important;
 }
 
 .simple-header-title-cls {
@@ -80,7 +99,15 @@ body {
     text-decoration: none !important;
     color: #3f51b5 !important;
 }
-
+.simple-menu-cls .mdui-typo-title a {
+    color: white !important;
+}
+.simple-menu-cls .mdui-typo-title a .mdui-icon {
+    font-size: 18px;
+}
+.simple-menu-cls .mdui-typo-title a:hover {
+    text-decoration: none;
+}
 .simple-menu-cls .mdui-list-item-content {
     padding-left: 10px;
     font-size: 12px;
@@ -180,7 +207,7 @@ body {
 /**
  * index page
  */
-.simple-right-panel .mdui-card-header {
+.simple-right-panel .mdui-card-header, #simple-toc .mdui-card-header {
     height: 36px;
     padding: 0 16px 0 16px;
     border-bottom: 1px solid rgba(0, 0, 0, .12);
@@ -287,6 +314,7 @@ body {
 .simple-toc-cls {
     width: 300px;
     padding-top: 120px;
+    z-index: 1999;
 }
 
 .post-toc-wrap {
@@ -393,21 +421,37 @@ body {
     margin-right: 20px;
     right: 20px;
 }
-
-.simple-share button {
+.simple-post-share-detail i {
+    color: white;
+}
+.simple-post-share-btn {
     width: 36px;
     min-width: 36px;
     height: 36px;
     line-height: 36px;
     border-radius: 18px;
+    margin-bottom: 10px;
+}
+#simple-post-share button {
     background-color: #eaecf7 !important;
 }
-
-.simple-share i {
+#simple-post-share i {
     width: 24px !important;
     margin-top: 12px !important;
     margin-left: 6px !important;
     line-height: 12px !important;
+}
+.simple-post-share-detail i {
+    margin-left: 8px;
+}
+.simple-header-share-pane {
+    z-index: 4999;
+    position: fixed;
+    right: 60px;
+    top: 50px;
+}
+.simple-post-share-detail a:hover {
+    text-decoration: none !important;
 }
 
 .simple-share .mdui-color-theme-accent {
@@ -454,6 +498,7 @@ body {
 }
 
 .simple-archive-name .mdui-btn {
-    min-width: 40px;
+    width: 100%;
     color: white;
+    padding: 0 8px;
 }
