--- a/layout/_partial/archive/categories.ejs
+++ b/layout/_partial/archive/categories.ejs
@@ -10,12 +10,12 @@ site.categories.each(function(category, i) {
 %>
 
 <div class="mdui-row simple-archive-header">
-    <div class="mdui-col-xs-10 mdui-col-offset-xs-1 mdui-valign simple-archive-header-inner">
+    <div class="mdui-col-md-10 mdui-col-offset-md-1 mdui-col-xs-12 mdui-valign simple-archive-header-inner">
         <div class="mdui-typo-display-2 mdui-text-color-white" id="simple-archive-title">Categories: <%= page.category %></div>
     </div>
 </div>
 <div class="mdui-row simple-archive-name">
-    <div class="mdui-col-md-10 mdui-col-offset-md-1 mdui-valign simple-archive-name-inner">
+    <div class="mdui-col-md-10 mdui-col-offset-md-1 mdui-col-xs-12 mdui-valign simple-archive-name-inner">
         <a href="/categories" class="mdui-btn">All</a>
         <%
             site.categories.each(function(category, i) {
@@ -42,15 +42,16 @@ site.categories.each(function(category, i) {
     var sortPosts = _[_.orderBy ? 'orderBy' : 'sortByOrder'](posts, ['date'], ['desc']);
 %>
 <div class="mdui-row simple-height">
-    <div class="mdui-row">
-        <% sortPosts.forEach(function(post, i) {
-            var offset = 'mdui-col-offset-md-2';
-            if (i % 2 === 1) {
-                offset = '';
-            } %>
-            <div class="mdui-col-md-4 <%= offset %> mdui-col-xs-12">
-                <%- partial('_partial/article-excerpt', {item: post, hide_excerpt: true}) %>
-            </div>
+    <div class="mdui-col-md-7 mdui-col-offset-md-1 mdui-col-xs-12">
+        <% sortPosts.forEach(function(post, i) { %>
+            <%- partial('_partial/article-excerpt', {item: post, hide_excerpt: true}) %>
         <% }); %>
+    </div>
+    <%# useful infomation panels %>
+    <div class="mdui-col-md-3 mdui-col-xs-12 simple-right-panel">
+        <%- partial('_partial/index/latest-message') %>
+        <%- partial('_partial/index/hot-tags') %>
+        <%- partial('_partial/index/recent-posts') %>
+        <%- partial('_partial/index/wechat-public-number') %>
     </div>
 </div>
