--- a/layout/_partial/comment.ejs
+++ b/layout/_partial/comment.ejs
@@ -1,7 +1,8 @@
 <%# comments https://valine.js.org %>
 
-<%- js('modules/valine/av-min.js') %>
-<%- js('modules/valine/Valine.min.js') %>
+<script src="//cdn1.lncld.net/static/js/3.0.4/av-min.js"></script>
+<script src="//unpkg.com/valine/dist/Valine.min.js"></script>
+
 <div id="vcomments"></div>
 <script>
     new Valine({
