--- a/layout/_partial/index/recent-posts.ejs
+++ b/layout/_partial/index/recent-posts.ejs
@@ -1,5 +1,5 @@
 <%  var posts = [];
-    page.posts.each(function(post){
+    site.posts.each(function(post){
         posts.push(post);
     });
     var sortPosts = _[_.orderBy ? 'orderBy' : 'sortByOrder'](posts, ['date'], ['desc']);
@@ -19,7 +19,7 @@
             <a href="<%- config.root %><%- item.path %>" class="mdui-text-color-theme">
                 <%- item.title %>
             </a>
-            <% if (i != sortPosts.length - 1) { %>
+            <% if (i != theme.recent.posts - 1) { %>
                 <div class="mdui-divider mdui-m-y-1"></div>
             <% } %>
         <% });%>
